[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "^2.31.0"
discord = "^2.3.2"
flask = "^2.3.3"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
openai = "^0.27.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"